# firedancer

./: README.md  SECURITY.md  WORKSPACE  check_counts.sh  test-transactions-parallel.sh  test-transactions.sh  test-txns.sh  test.sh
.github/workflows/: make.yml  make_daily.yml
config/: everything.mk  linux_clang_x86_64_asan.mk  with-ffi.mk
ffi/rust/: Cargo.toml
ffi/rust/ballet/: Cargo.toml
ffi/rust/firedancer-sys/: Cargo.toml  build.rs  wrapper_ballet.h
ffi/rust/tango/: Cargo.toml
ffi/rust/tango/src/: lib.rs
src/app/fdctl/: Cargo.toml  Local.mk  config.c  config.h  fdctl.h  keygen.c  main1.c  run.c  run.h
src/app/fddev/: main.c
src/app/frank/: fd_frank.h  fd_frank_mon.bin.c  fd_frank_pack.c  fd_frank_quic.c
src/ballet/: fd_ballet.h
src/ballet/block/: BUILD  Local.mk  fd_block.c  fd_block.h  test_block.c  test_poh.c
src/ballet/ebpf/: fd_ebpf.h
src/ballet/pack/: fd_pubkey_map_perfect.c
src/ballet/reedsol/: generate_encode.py
src/ballet/shred/: fd_shred.h  test_deshredder.c
src/disco/quic/: fd_quic_tile.c
src/flamenco/: fd_flamenco.c
src/flamenco/leaders/: Local.mk  fd_leaders.c  fd_leaders.h  test_leaders.c
src/flamenco/stakes/: Local.mk  fd_stakes.c  fd_stakes_from_snapshot.c
src/flamenco/sysvar/: Local.mk  fd_sysvar_epoch_schedule.c  fd_sysvar_epoch_schedule.h
src/flamenco/types/: fd_types.c  fd_types.h  fd_types.json  fd_types_custom.h
src/net/quic/: fd_quic.c
src/tango/quic/: fd_quic.c  fd_quic_stream.c
src/tango/xdp/: build-xdp.sh  fd_xdp_redirect_prog.c  fd_xdp_redirect_user.c
src/test/: frank-single-transaction.sh
(+26 files in other folders)
